src/test/deca/syntax/invalid/parser/oracle/method_block_multi_string.deca
class A { a a (a a) {"Multi string
			line not possible in block"} }